--- a/index.html
+++ b/index.html
@@ -287,12 +287,8 @@ $(document).ready(function () {
 <div id="TOC">
 <ul>
 <li><a href="#introduction" id="toc-introduction"><span class="toc-section-number">1</span> Introduction</a></li>
-<li><a href="#ai-queries" id="toc-ai-queries"><span class="toc-section-number">2</span> AI queries</a>
-<ul>
-<li><a href="#data-retrieval" id="toc-data-retrieval"><span class="toc-section-number">2.1</span> Data Retrieval</a></li>
-</ul></li>
-<li><a href="#main-analysis" id="toc-main-analysis"><span class="toc-section-number">3</span> Main Analysis</a></li>
-<li><a href="#references" id="toc-references"><span class="toc-section-number">4</span> References</a></li>
+<li><a href="#ai-queries" id="toc-ai-queries"><span class="toc-section-number">2</span> AI queries</a></li>
+<li><a href="#references" id="toc-references"><span class="toc-section-number">3</span> References</a></li>
 </ul>
 </div>
 
@@ -363,25 +359,12 @@ g-table-intro h4 {
 <div id="ai-queries" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> AI queries</h1>
 <ul>
-<li><a href="./claude_sonnet_4,5_NextStride_chat/">./claude_sonnet_4,5_NextStride_chat/</a></li>
-</ul>
-<div id="data-retrieval" class="section level2" number="2.1">
-<h2><span class="header-section-number">2.1</span> Data Retrieval</h2>
-<ul>
-<li><a href="./_get_data.html">_get_data.Rmd</a></li>
+<li><a href="./claude_sonnet_4p5_NextStride_chat/">./claude_sonnet_4p5_NextStride_chat/</a></li>
 </ul>
 <p><br/></p>
 </div>
-</div>
-<div id="main-analysis" class="section level1" number="3">
-<h1><span class="header-section-number">3</span> Main Analysis</h1>
-<ul>
-<li><a href="_GN4GD_analysis.html">_GN4GD_analysis.html</a></li>
-</ul>
-<p><br/></p>
-</div>
-<div id="references" class="section level1" number="4">
-<h1><span class="header-section-number">4</span> References</h1>
+<div id="references" class="section level1" number="3">
+<h1><span class="header-section-number">3</span> References</h1>
 <div id="refs">
 
 </div>
